* win32/win32.c (waitpid): return immediately if interrupted.   reported by <takkanm AT gmail.com> [ruby-dev:49176] [Bug #11340]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@51202 b2dd03c8-39d4-4d8f-98ff-823fe69b080e